Fix entity annotations (#99)
Fix entity annotations and clean up service tests